Fix social icon spacing

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -264,14 +264,13 @@ header
     align-items: center
     justify-content: center
     flex-shrink: 0
-    outline-offset: 4px
-    width: 22px
-    height: 22px
+    width: 36px
+    height: 36px
 
     svg
       fill: currentColor
-      height: 36px
-      width: 36px
+      height: 22px
+      width: 22px
 
       &.tumblr-icon
         width: 14px
